# syncer

./: README.md  TODO.md  package-lock.json  package.json  pnpm-lock.yaml
client/: package.json  pnpm-lock.yaml  tsconfig.json
client/src/app/: page.tsx  (+2 more)
server/: .gitignore  Dockerfile  Makefile  alembic.ini  compose.yml  pyproject.toml
server/src/: main.py
server/src/api/: __init__.py  auth.py  cards.py  tags.py  user.py
server/src/common/: database.py  get_current_user_from_token.py
server/src/config/: __init__.py  setttings.py
server/src/daos/: __init__.py  auth_dao.py  card_dao.py  tag_dao.py  user_dao.py
server/src/dtos/: auth.py  cards.py  tags.py  user.py
server/src/migrations/: env.py
server/src/migrations/versions/: 2025_07_04_1832-666273e229db_init_with_user_tags.py  2025_07_04_1833-5859607f4d10_user_tag.py  2025_07_04_1844-f0dd63a694a0_card_tags.py  2025_07_10_2058-71d591051a87_remove_rating.py
server/src/models/: __init__.py  base.py  card.py  card_tag.py  user.py  user_tag.py
server/src/services/auth/: __init__.py  login_service.py  refresh_token_service.py  register_service.py  verify_auth_token_service.py
server/src/services/cards/: __init__.py  create_card_service.py  delete_card_service.py  get_card_service.py  get_user_cards_service.py  update_card_service.py
server/src/services/tags/: __init__.py  create_tag_service.py  delete_tag_service.py  get_user_tags_service.py
server/src/services/user/: __init__.py  update_user_service.py
server/vars/: env.dev.example
src/: utils.ts
src/app/: layout.tsx  page.module.css  page.tsx
(+54 files in other folders)
